<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QR Business Card</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pick_contact">Pick from contacts</string>
    <string name="all_fields">All</string>
    <string name="recommended">Recommended</string>
    <string name="surname">Surname</string>
    <string name="firstname">First name</string>
    <string name="company">Organization</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="homepage">Homepage</string>
    <string name="companyy">Company</string>
    <string name="contact">Contact</string>
    <string name="street">Street name</string>
    <string name="city">City</string>
    <string name="zip">Postal code</string>
    <string name="country">Country</string>
    <string name="department">Department</string>

</resources>
